@@ -10,10 +10,10 @@ INCLUDES = $(all_includes)
 
 libPanel_a_METASOURCES = AUTO
 
-libPanel_a_SOURCES = krcolorcache.cpp krcalcspacedialog.cpp krpopupmenu.cpp krpreviewpopup.cpp krview.cpp krdetailedviewitem.cpp krdetailedview.cpp panelfunc.cpp listpanel.cpp panelpopup.cpp krdrag.cpp
+libPanel_a_SOURCES = krcolorcache.cpp krcalcspacedialog.cpp krpopupmenu.cpp krpreviewpopup.cpp krview.cpp krdetailedviewitem.cpp krdetailedview.cpp panelfunc.cpp listpanel.cpp panelpopup.cpp krdrag.cpp krselectionmode.cpp
 
 
-EXTRA_DIST = listpanel.cpp panelfunc.cpp panelfunc.h listpanel.h krdetailedview.cpp krdetailedview.h krdetailedviewitem.cpp krdetailedviewitem.h krview.cpp krview.h krviewitem.h krpreviewpopup.cpp krpreviewpopup.h krpopupmenu.cpp krpopupmenu.h krcalcspacedialog.cpp krcalcspacedialog.h krcolorcache.cpp krcolorcache.h krdrag.h
+EXTRA_DIST = listpanel.cpp panelfunc.cpp panelfunc.h listpanel.h krdetailedview.cpp krdetailedview.h krdetailedviewitem.cpp krdetailedviewitem.h krview.cpp krview.h krviewitem.h krpreviewpopup.cpp krpreviewpopup.h krpopupmenu.cpp krpopupmenu.h krcalcspacedialog.cpp krcalcspacedialog.h krcolorcache.cpp krcolorcache.h krdrag.h krselectionmode.cpp krselectionmode.h
 
 ####### kdevelop will overwrite this part!!! (end)############
 noinst_HEADERS =  panelpopup.h
