@@ -1,5 +1,6 @@
 ======================
-    ADDED: Ukrainian translation (thanks Ivan Petrouchtchak)
+    ADDED: Heiner's selection mode patch. Still alpha.
+	 ADDED: Ukrainian translation (thanks Ivan Petrouchtchak)
     ADDED: disk usage tool (alpha version)
     ADDED: vertical krusader: hit alt+ctrl+v to test
     FIXED: mime types are shown only in english
